# openconnect-auto-sso

./: .gitignore  LICENSE  README.md  config.example.sh  config.example.toml  install-autostart.sh  install.sh  pyproject.toml
lib/: common.sh
libexec/: vpn-teardown
src/: dnsroute.py  loadconfig.py  vpn_browser.py
tests/: README.md  conftest.py  run.sh  test_dnsroute.py  test_loadconfig.py  test_shell.py  test_vpn_browser.py
